Fix search options closed on mobile

--- a/scss/partials/_filter-bar.scss
+++ b/scss/partials/_filter-bar.scss
@@ -119,7 +119,6 @@
 
   &__menu {
     position: absolute;
-    z-index: 1;
     top: 0;
     left: 0;
     width: 100%;
@@ -131,6 +130,7 @@
     transition: transform 0.2s ease;
     background-color: $primary-white;
     padding-bottom: 20rem;
+    z-index: 10;
 
     @include breakpoint(desktop) {
       display: grid;
